[gd_scene load_steps=5 format=3 uid="uid://c7optfnm3m3ms"]

[ext_resource type="FontFile" uid="uid://bg2hgc4lw6bau" path="res://assets/fonts/editundo.ttf" id="1_k2fmo"]
[ext_resource type="Script" uid="uid://dh4kny63m55e5" path="res://components/quantity_displayer.gd" id="2_l3cfh"]
[ext_resource type="Script" uid="uid://cx0vywicoybvn" path="res://components/board.gd" id="3_6q06x"]

[sub_resource type="LabelSettings" id="LabelSettings_0wfyh"]
font = ExtResource("1_k2fmo")
font_size = 14
shadow_size = 0
shadow_color = Color(0.23619807, 0.26548585, 0.40847915, 1)
shadow_offset = Vector2(0, 1)

[node name="Main" type="Node2D"]

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(56, 56)
position_smoothing_enabled = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="BlueQuantityDisplayer" type="Label" parent="CanvasLayer"]
anchors_preset = -1
anchor_left = 0.2
anchor_top = 0.8
anchor_right = 0.2
anchor_bottom = 0.8
offset_left = -23.0
offset_bottom = 14.0
grow_horizontal = 0
text = "6/7"
label_settings = SubResource("LabelSettings_0wfyh")
horizontal_alignment = 2
vertical_alignment = 1
script = ExtResource("2_l3cfh")

[node name="RedQuantityDisplayer" type="Label" parent="CanvasLayer"]
anchors_preset = -1
anchor_left = 0.8
anchor_top = 0.8
anchor_right = 0.8
anchor_bottom = 0.8
offset_right = 23.0
offset_bottom = 14.0
text = "6/7"
label_settings = SubResource("LabelSettings_0wfyh")
horizontal_alignment = 2
vertical_alignment = 1
script = ExtResource("2_l3cfh")
max_quantity = 1

[node name="Control" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="TextureButton" type="TextureButton" parent="CanvasLayer/Control"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Board" type="Node2D" parent="."]
y_sort_enabled = true
script = ExtResource("3_6q06x")

[connection signal="blue_max_quanity_changed" from="Board" to="CanvasLayer/BlueQuantityDisplayer" method="_on_board_blue_max_quanity_changed"]
[connection signal="blue_quanity_changed" from="Board" to="CanvasLayer/BlueQuantityDisplayer" method="_on_board_blue_quanity_changed"]
[connection signal="red_max_quanity_changed" from="Board" to="CanvasLayer/RedQuantityDisplayer" method="_on_board_red_max_quanity_changed"]
[connection signal="red_quanity_changed" from="Board" to="CanvasLayer/RedQuantityDisplayer" method="_on_board_red_quanity_changed"]
